Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,17 @@ img:hover {
   
   
 }
+.small{
+  
+}
+
+.med{
+  
+}
+
+.big{
+  
+}
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
