Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -46,20 +46,20 @@ img:hover {
   background-color: #dd4444;
 }
 
-.column{
+.column { width:31%; display:inline-block;
   
   
   
 }
-.small{
-  
-}
-
-.med{
+.small {
   
 }
 
-.big{
+.med {
+  
+}
+
+.big {
   
 }
 
