Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -53,15 +53,18 @@ display:inline-block;
   
   
 }
-.small {
+.small { width:100%;
+height: 100%;
   
 }
 
-.med {
+.med { width: 200%;
+height: 200%;
   
 }
 
-.big {
+.big { width: 300%;
+height: 300%;
   
 }
 
